@@ -11,7 +11,8 @@ PKG_NAME="GDM"
 
 if test ! -d $srcdir/vicious-extensions; then
 	echo -n "**Error**: vicious-extensions not found, please do a clean "
-	echo "checkout or do: cvs -z3 get vicious-extensions"
+	echo "checkout or do:"
+        echo "svn co http://svn.gnome.org/svn/vicious-extensions/trunk vicious-extensions"
 	exit 1
 fi
 
@@ -24,7 +25,7 @@ fi
 }
 
 which gnome-autogen.sh || {
-    echo "You need to install gnome-common from the GNOME CVS"
+    echo "You need to install gnome-common from the GNOME SVN"
     exit 1
 }
 #USE_GNOME2_MACROS=1 . gnome-autogen.sh
