@@ -1,3 +1,9 @@
+2007-02-08  Brian Cameron  <brian.cameron@sun.com>
+
+	* gdm-build.sh: Remove this old script for building GDM.  Not used
+	  anymore.
+	* autogen.sh: Change CVS references to SVN.
+
 2007-02-06  Brian Cameron  <brian.cameron@sun.com>
 
 	Fixes by Ludwig Nussel <ludwig.nussel@suse.de>.
